fix: Footer item aligned center

--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@
 /* contact styles */
 .contact-section {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-content: center;
   margin: 92.33px 150px 0px 150px;
 }
@@ -331,23 +331,23 @@ textarea {
 }
 
 /* footer styles */
+
 .footer{
   margin: 104px 455px 103px 454px;
 }
 
 .footer h1{
   font-family: "Inter", sans-serif;
-  font-weight:900;
+  font-weight: 900;
   font-size: 100px;
   text-align: center;
   padding-bottom: 8px;
   margin: 0;
 }
 
-
 .corlo2 {
   font-family: "Inter", sans-serif;
-  font-weight:400;
+  font-weight: 400;
   font-size: 16px;
   color: #8987A1;
   margin: 0;
@@ -359,11 +359,14 @@ textarea {
 }
 
 .footer ul {
-    display: flex ;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 531px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  max-width: 531px;
+  margin: 0 auto; /* Centers the ul horizontally */
+  padding: 0; /* Removes default padding */
 }
+
 .footer ul li{
   list-style: none;
 }
